modifca getLast